--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Doodlekong">
+        android:theme="@style/Theme.Crocodile">
         <activity android:name="com.okul.crocodile.ui.setup.SetupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
